crates/shape-address/tests/ui/shape_describe_conflicting_dimensions.stderr
error: shape field can have only one dimension
 --> tests/ui/shape_describe_conflicting_dimensions.rs:6:24
  |
6 |     #[shape(structure, names)]
  |                        ^^^^^
