crates/shape-address/tests/ui/shape_describe_conflicting_dimensions.rs
use fe_shape_address::ShapeDescribe;

#[derive(Clone, ShapeDescribe)]
#[shape(kind = "bad")]
struct ConflictingDimensions {
    #[shape(structure, names)]
    value: String,
}

fn main() {}
